# kamesizer

./: README.md  docker-compose.yaml
api/: .env.example  .gitignore  alembic.ini  entrypoint.sh  main.py  pyproject.toml  requirements.txt
api/src/libs/api/: api_handler.py
api/src/libs/db/: database_handler.py  schemas.py  session_manager.py
api/src/libs/db/migrations/: env.py
api/src/libs/db/migrations/versions/: b669bfb2a73f_initial_migration.py
api/src/libs/message_broker/: rabbitmq_handler.py
api/src/modules/image_resize/: controller.py  ext.py  models.py  repository.py  service.py
api/src/modules/image_resize/interfaces/: storage_interface.py
api/src/modules/image_resize/validators/: image_validator.py
api/src/shared/interfaces/: database_interface.py
api/src/shared/utils/: config.py  load_icon.py  log_handler.py
api/src/shared/validators/: boolean_env_validator.py  check_log_level.py
rabbitmq/: .env.example  dockerfile  main.py  pyproject.toml  requirements.txt
rabbitmq/src/file_resize/: file_resizer.py  service.py
rabbitmq/src/file_resize/interfaces/: storage_interface.py
rabbitmq/src/libs/rabbitmq/: rabbitmq_handler.py
rabbitmq/src/shared/utils/: config.py
rabbtimq/: .gitignore  main.py  pyproject.toml
rabbtimq/src/libs/rabbitmq/: rabbitmq_handler.py
rabbtimq/src/shared/utils/: config.py  log_handler.py  rabbitmq.py
