[tool.poetry]
name = "kamesizer-rabbitmq"
version = "0.1.0"
description = ""
authors = ["lucaslima18 <lucas.ala1999@gmail.com>"]
readme = "README.md"
packages = [{include = "kamesizer_rabbitmq"}]

[tool.poetry.dependencies]
python = "^3.8"
pika = "^1.3.2"
coloredlogs = "^15.0.1"
python-dotenv = "^1.0.1"
pillow = "^10.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
